version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/DataModel/SolverData/MAPDLBoltPretensionData.rst.txt
.. vale off



:class:`MAPDLBoltPretensionData`
================================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.DataModel.SolverData.MAPDLBoltPretensionData(id: int, obj: Ansys.Common.Interop.DSObjectsAuto.IDSSolutionSummaryAuto, rowId: int)

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLBoltPretensionData

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~PretensionNodeIds`
            - Gets the Pretension Node Ids for the bolt pretension.
          * - :py:attr:`~RealConstantIds`
            - Gets the Real Constant Ids for the bolt pretension.







Property detail
---------------
.. py:property:: PretensionNodeIds
   :type: Optional[Iterable[int]]


   
   Gets the Pretension Node Ids for the bolt pretension.
















   ..
       !! processed by numpydoc !!

.. py:property:: RealConstantIds
   :type: Optional[Iterable[int]]


   
   Gets the Real Constant Ids for the bolt pretension.
















   ..
       !! processed by numpydoc !!







.. vale on