version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/SolverData/MAPDLBoltPretensionData.rst.txt
.. vale off



:class:`MAPDLBoltPretensionData`
================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.SolverData.MAPDLBoltPretensionData(id: int, obj: Ansys.Common.Interop.DSObjectsAuto.IDSSolutionSummaryAuto, rowId: int)

   Bases: :py:obj:`object`



.. py:currentmodule:: MAPDLBoltPretensionData

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~PretensionNodeIds`
            - Gets the Pretension Node Ids for the bolt pretension.
          * - :py:attr:`~RealConstantIds`
            - Gets the Real Constant Ids for the bolt pretension.







Property detail
---------------
.. py:property:: PretensionNodeIds
   :type: Optional[Iterable[int]]


   
   Gets the Pretension Node Ids for the bolt pretension.
















   ..
       !! processed by numpydoc !!

.. py:property:: RealConstantIds
   :type: Optional[Iterable[int]]


   
   Gets the Real Constant Ids for the bolt pretension.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on